--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Artur Zayats",
   "license": "MIT",
   "dependencies": {
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "path-to-regexp": "^1.0.1"
   }
 }
